Cocoa integration - handle didResignKey correctly

When we receive didResignKey notification, before setting active window to
null we check that [NSApp keyWindow] is nil, but it's not. At the same moment,
[NSApp keyWindow] == windowNotification.object - so it's indeed the window that
resigned the key status, it's just NSApp keyWindow that is not nil yet.

Change-Id: Iedc85d806c7d583a2054dc4d7168af13c9c7a4e0
Task-number: QTBUG-49925
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>